2001-10-13  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: The NsOpenSSLSend function simply did an
	SSL_write. Robert Spassky Cabacungan found that this wasn't
	working for long file transfers. Specifically, in his own words:

	The problem is the NsOpenSSLSend() function in ssl.c, in
	nsopenssl-2.0. BIO_write is returning a "resource not available,
	try again" error, but NsOpenSSLSend is not checking for that, and
	so behaves as though it were a non-recoverable error, aborting the
	write instead of trying again.

        A simple loop over the SSL_write() fixes this.  Ironically, there
	is commented out code at the bottom of the function which would
	handle retries.  However, the comment reads "this BIO_write loop
	doesn't work, but seems like it should".  So it looks like Scott
	did consider this possibility, but it kind of slipped through the
	cracks in the final release.  Indeed, NsOpenSSLRecv() does loop
	and handle retries.

	Rob change the SSL_write to be inside of a loop that checks
	BIO_should_retry on the write BIO.

2001-09-28  Scott S. Goodwin  <scott@scottg.net>

	* Makefile: Added better make instructions when OPENSSL var isn't
	set.

	* Makefile: Cleaned up the Makefile considerably so it's easier to
	read and understand.

2001-09-27  Scott S. Goodwin  <scott@scottg.net>

	* tclcmds.c: Bug fixes contributed by Rich Fredericks, AOL Local
	Technology group. In his own words: "As I said on the phone, All I
	really did was make sure NsTclOpenSSLCmd returns out (TCL_ERROR)
	if the argc req isn't met (line 205) and add a check for NULL on
	scPtr (lines 220-223). I also moved the "scPtr =
	NsOpenSSLGetConn(interp)" statement to below the code for the
	"info" option to the tcl ns_openssl command (previously it was
	executed first), since that specific variant of the command does
	not require an SSL conn context." Thanks, Rich!

2001-08-29  Scott S. Goodwin  <scott@scottg.net>

	* https.tcl: made fixes to ns_httpspost per Rick Lansky at